add gitignore, change css of introduction page Signed-off-by: vuvuvuvvv <nguyenvu260502@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ phpunit.phar
 /frontend/config
 /backend/config
 /common/config
+/frontend/controllers/TestController.php
+/frontend/views/test/test.php
