--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "kartik-v/yii2-grid": "^3.3",
     "kartik-v/yii2-widget-select2": "^2.2",
     "lucidtaz/yii2-scssphp": "^0.2.1",
-    "ext-openssl": "*"
+    "ext-openssl": "*",
+    "ext-json": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
