--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
     "lucidtaz/yii2-scssphp": "^0.2.1",
     "ext-openssl": "*",
     "ext-json": "*",
-    "justinvoelker/yii2-separatedpager": "*"
+    "justinvoelker/yii2-separatedpager": "*",
+    "kartik-v/yii2-field-range": "^1.3",
+    "kartik-v/yii2-widget-spinner": "^1.0",
+    "kartik-v/yii2-widget-rangeinput": "^1.0"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
