--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,7 @@
     "lucidtaz/yii2-scssphp": "^0.2.1",
     "ext-openssl": "*",
     "ext-json": "*",
-    "justinvoelker/yii2-separatedpager": "*",
-    "kartik-v/yii2-field-range": "^1.3",
-    "kartik-v/yii2-widget-spinner": "^1.0",
-    "kartik-v/yii2-widget-rangeinput": "^1.0"
+    "justinvoelker/yii2-separatedpager": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
